--- a/apps/Manager/views/projects/create.phtml
+++ b/apps/Manager/views/projects/create.phtml
@@ -12,80 +12,87 @@
           <p id="desc"></p>
         </div>
       </div>
-      <div class="col-md-12">
-        <div class="btn-group btn-group-justified">
-          <a role="button" class="btn btn-default" href="/projects/" >Projetos Cadastrados</a>
-          <a role="button" class="btn btn-primary" href="/projects/create" >Cadastrar Novo Projeto</a>
-        </div><br>
-      </div>
     </div>
 
-    <div class="tab-content">
+    <div class="row">
+      <div class="col-md-2">
+        <div class="panel panel-default">
+          <div class="panel-heading clean">Navegação</div>
+          <div class="panel-body no-padd">
+            <div class="list-group no-margn mail-nav">
+              <a href="/projects" class="list-group-item">Projetos Cadastrados</a>
+              <a href="/projects/create" class="list-group-item on">Cadastrar Projeto</a>
+            </div>
+          </div>
+        </div>
+      </div>
 
-      <div class="panel panel-default">
-        <div class="panel-body">
+      <div class="col-md-10">
+        <div class="panel panel-default">
+          <div class="panel-body">
 
-            <form method="post" class="form-horizontal validator-form" action="/projects/new" accept-charset="utf8" enctype="multipart/form-data" novalidate="novalidate">
-              <?php echo $form->render("security"); ?>
+              <form method="post" class="form-horizontal validator-form" action="/projects/new" accept-charset="utf8" enctype="multipart/form-data" novalidate="novalidate">
+                <?php echo $form->render("security"); ?>
 
-              <div class="row">
+                <div class="row">
 
-                <div class="col-md-6">
-                  <label class="control-label">Título do Projeto</label>
-                  <div class="form-group has-feedback">
-                    <?php echo $form->render("title"); ?>
+                  <div class="col-md-6">
+                    <label class="control-label">Título do Projeto</label>
+                    <div class="form-group has-feedback">
+                      <?php echo $form->render("title"); ?>
+                    </div>
+                  </div>
+
+                  <div class="col-md-3">
+                    <label class="control-label">Categoria</label>
+                    <div class="form-group has-feedback">
+                      <?php echo $form->render("type"); ?>
+                    </div>
+                  </div>
+
+                  <div class="col-md-3">
+                    <label class="control-label">Deadline</label>
+                    <div class="form-group has-feedback">
+                      <?php echo $form->render("deadline"); ?>
+                    </div>
+                  </div>
+
+                </div>
+                <div class="row">
+
+                  <div class="col-md-6">
+                    <label class="control-label">Membros</label>
+                    <div class="form-group has-feedback">
+                      <?php echo $form->render("members"); ?>
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <label class="control-label">Cliente</label>
+                    <div class="form-group has-feedback">
+                      <?php echo $form->render("client"); ?>
+                    </div>
+                  </div>
+
+                </div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <br>
+                  	<?php echo $form->render("description"); ?>
                   </div>
                 </div>
 
-                <div class="col-md-3">
-                  <label class="control-label">Categoria</label>
-                  <div class="form-group has-feedback">
-                    <?php echo $form->render("type"); ?>
+                <hr class="dotted">
+
+                <div class="row">
+                  <div class="col-sm-12">
+                    <button type="submit" class="btn btn-primary btn-lg pull-right" name="signup" value="Validate">Cadastrar</button>
                   </div>
                 </div>
 
-                <div class="col-md-3">
-                  <label class="control-label">Deadline</label>
-                  <div class="form-group has-feedback">
-                    <?php echo $form->render("deadline"); ?>
-                  </div>
-                </div>
+              </form>
 
-              </div>
-              <div class="row">
-
-                <div class="col-md-6">
-                  <label class="control-label">Membros</label>
-                  <div class="form-group has-feedback">
-                    <?php echo $form->render("members"); ?>
-                  </div>
-                </div>
-
-                <div class="col-md-6">
-                  <label class="control-label">Cliente</label>
-                  <div class="form-group has-feedback">
-                    <?php echo $form->render("client"); ?>
-                  </div>
-                </div>
-
-              </div>
-              <div class="row">
-                <div class="col-md-12">
-                  <br>
-                	<?php echo $form->render("description"); ?>
-                </div>
-              </div>
-
-              <hr class="dotted">
-
-              <div class="row">
-                <div class="col-sm-12">
-                  <button type="submit" class="btn btn-primary btn-lg pull-right" name="signup" value="Validate">Cadastrar</button>
-                </div>
-              </div>
-
-            </form>
-
+          </div>
         </div>
       </div>
 
