--- a/apps/Manager/views/projects/settings.phtml
+++ b/apps/Manager/views/projects/settings.phtml
@@ -14,83 +14,86 @@
       </div>
     </div>
 
-    <div class="panel-body">
-
-      <div class="btn-group btn-group-justified">
-        <a role="button" class="btn btn-default" href="/projects/" >Projetos Cadastrados</a>
-        <a role="button" class="btn btn-default" href="/project/overview/<?php echo $project->_; ?>" >Visão Geral</a>
-        <a role="button" class="btn btn-default" href="/project/tasks/<?php echo $project->_; ?>" >Tarefas</a>
-        <a role="button" class="btn btn-primary" href="/project/settings/<?php echo $project->_; ?>" >Configurações</a>
-        <a role="button" class="btn btn-default" href="/project/feedback/<?php echo $project->_; ?>" >Feedback</a>
-        <a role="button" class="btn btn-default" href="/project/invoices/<?php echo $project->_; ?>" >Faturas</a>
-      </div>
-      <br>
-
-      <div class="row">
-        <div class="col-lg-12 col-md-12">
-          <div class="panel panel-default">
-            <div class="panel-body">
-
-              <form method="post" class="form-horizontal validator-form" action="/project/update/<?php echo $project->_; ?>" accept-charset="utf8" enctype="multipart/form-data" novalidate="novalidate">
-                <?php echo $form->render("security"); ?>
-
-                <div class="row">
-
-                  <div class="col-md-6">
-                    <div class="row">
-
-                      <div class="col-md-6">
-                        <label class="control-label">Título do Projeto</label>
-                        <div class="form-group has-feedback">
-                          <?php echo $form->render("project_title"); ?>
-                        </div>
-                      </div>
-
-                      <div class="col-md-6">
-                        <label class="control-label">Categoria</label>
-                        <div class="form-group has-feedback">
-                          <?php echo $form->render("project_type"); ?>
-                        </div>
-                      </div>
-
-                      <div class="col-md-6">
-                        <label class="control-label">Deadline</label>
-                        <div class="form-group has-feedback">
-                          <?php echo $form->render("project_deadline"); ?>
-                        </div>
-                      </div>
-
-                      <div class="col-md-6">
-                        <label class="control-label">Cliente</label>
-                        <div class="form-group has-feedback">
-                          <?php echo $form->render("project_client"); ?>
-                        </div>
-                      </div>
-
-                    </div>
-                  </div>
-
-                  <div class="col-md-6">
-                    <label class="control-label">Descrição</label>
-                    <?php echo $form->render("project_description"); ?>
-                  </div>
-
-                </div>
-
-                <hr class="dotted">
-
-                <div class="row">
-                  <div class="col-sm-12">
-                    <button type="submit" class="btn btn-primary btn-lg pull-right" name="signup" value="Validate">Alterar</button>
-                  </div>
-                </div>
-              </form>
-
+    <div class="row">
+      <div class="col-sm-2">
+        <div class="panel panel-default">
+          <div class="panel-heading clean">Navegação</div>
+          <div class="panel-body no-padd">
+            <div class="list-group no-margn mail-nav">
+              <a href="/projects" class="list-group-item">Projetos Cadastrados</a>
+              <a href="/project/overview/<?php echo $project->_; ?>" class="list-group-item">Visão Geral</a>
+              <a href="/project/tasks/<?php echo $project->_; ?>"    class="list-group-item">Tarefas</a>
+              <a href="/project/settings/<?php echo $project->_; ?>" class="list-group-item on">Configurações</a>
+              <a href="/project/feedback/<?php echo $project->_; ?>" class="list-group-item">Feedback</a>
+              <a href="/project/invoices/<?php echo $project->_; ?>" class="list-group-item">Faturas</a>
             </div>
           </div>
         </div>
+      </div>
 
+      <div class="col-md-10">
+            <div class="col-lg-12 col-md-12">
+              <div class="panel panel-default">
+                <div class="panel-body">
 
+                  <form method="post" class="form-horizontal validator-form" action="/project/update/<?php echo $project->_; ?>" accept-charset="utf8" enctype="multipart/form-data" novalidate="novalidate">
+                    <?php echo $form->render("security"); ?>
+
+                    <div class="row">
+
+                      <div class="col-md-6">
+                        <div class="row">
+
+                          <div class="col-md-6">
+                            <label class="control-label">Título do Projeto</label>
+                            <div class="form-group has-feedback">
+                              <?php echo $form->render("project_title"); ?>
+                            </div>
+                          </div>
+
+                          <div class="col-md-6">
+                            <label class="control-label">Categoria</label>
+                            <div class="form-group has-feedback">
+                              <?php echo $form->render("project_type"); ?>
+                            </div>
+                          </div>
+
+                          <div class="col-md-6">
+                            <label class="control-label">Deadline</label>
+                            <div class="form-group has-feedback">
+                              <?php echo $form->render("project_deadline"); ?>
+                            </div>
+                          </div>
+
+                          <div class="col-md-6">
+                            <label class="control-label">Cliente</label>
+                            <div class="form-group has-feedback">
+                              <?php echo $form->render("project_client"); ?>
+                            </div>
+                          </div>
+
+                        </div>
+                      </div>
+
+                      <div class="col-md-6">
+                        <label class="control-label">Descrição</label>
+                        <?php echo $form->render("project_description"); ?>
+                      </div>
+
+                    </div>
+
+                    <hr class="dotted">
+
+                    <div class="row">
+                      <div class="col-sm-12">
+                        <button type="submit" class="btn btn-primary btn-lg pull-right" name="signup" value="Validate">Alterar</button>
+                      </div>
+                    </div>
+                  </form>
+
+                </div>
+              </div>
+            </div>
       </div>
     </div>
 
