--- a/apps/Manager/views/projects/tasks.phtml
+++ b/apps/Manager/views/projects/tasks.phtml
@@ -14,72 +14,77 @@
       </div>
     </div>
 
-    <div class="panel-body">
-
-      <div class="btn-group btn-group-justified">
-        <a role="button" class="btn btn-default" href="/projects/" >Projetos Cadastrados</a>
-        <a role="button" class="btn btn-default" href="/project/overview/<?php echo $project->_; ?>" >Visão Geral</a>
-        <a role="button" class="btn btn-primary" href="/project/tasks/<?php echo $project->_; ?>" >Tarefas</a>
-        <a role="button" class="btn btn-default" href="/project/settings/<?php echo $project->_; ?>" >Configurações</a>
-        <a role="button" class="btn btn-default" href="/project/feedback/<?php echo $project->_; ?>" >Feedback</a>
-        <a role="button" class="btn btn-default" href="/project/invoices/<?php echo $project->_; ?>" >Faturas</a>
-      </div>
-      <br>
-
-      <div class="row">
-        <div class="col-lg-12 col-md-12">
-          <div class="panel panel-default">
-            <div class="panel-heading space-between">
-              <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search style="margin-right:15px" />
-              <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#addTask" >
-                <span class="fa fa-plus"></span> Adicionar Tarefa
-              </button>
+    <div class="row">
+      <div class="col-sm-2">
+        <div class="panel panel-default">
+          <div class="panel-heading clean">Navegação</div>
+          <div class="panel-body no-padd">
+            <div class="list-group no-margn mail-nav">
+              <a href="/projects" class="list-group-item">Projetos Cadastrados</a>
+              <a href="/project/overview/<?php echo $project->_; ?>" class="list-group-item">Visão Geral</a>
+              <a href="/project/tasks/<?php echo $project->_; ?>"    class="list-group-item on">Tarefas</a>
+              <a href="/project/settings/<?php echo $project->_; ?>" class="list-group-item">Configurações</a>
+              <a href="/project/feedback/<?php echo $project->_; ?>" class="list-group-item">Feedback</a>
+              <a href="/project/invoices/<?php echo $project->_; ?>" class="list-group-item">Faturas</a>
             </div>
-            <table class="table table-striped no-margn">
-                <thead>
-                  <tr>
-                    <th>Tarefa</th>
-                    <th>Deadline</th>
-                    <th>Designado à</th>
-                    <th>Status</th>
-                    <th><i class="fa fa-gears"></i></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <?php foreach($tasks as $task): ?>
-                    <tr data-searchable data-filter-index="<?php echo $task->status; ?>" >
-                      <td><?php echo $task->title; ?></td>
-                      <td>
-                        <?php $label = ((new \DateTime("now")) > (new \DateTime($task->deadline)) ? "label-danger" : "label-primary"); ?>
-                        <span class="label <?php echo $label; ?>"><?php echo (new \DateTime($task->deadline))->format("d-m-Y"); ?></span>
-                      </td>
-                      <td>
-                        <img src="/assets/manager/images/avtar/<?php echo $task->image; ?>" alt="<?php echo $task->name; ?>" class="img-circle avtar" />
-                        <?php echo $task->name; ?><br>
-                      </td>
-                      <td>
-                        <span class="label label-default"><?php echo $controller->ProjectStatus($task->status); ?></span>
-                      </td>
-                      <td>
-                        <form method="post" class="validator-form" action="/project/task/remove/<?php echo "{$project->_}/{$task->_}"?>" novalidate="novalidate">
-                          <?php echo $form->render("security"); ?>
-                          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#taskInfo-<?php echo $task->_; ?>">
-                            <span class="fa fa-info-circle"></span>
-                          </button>
-                          <button type="button" class="btn btn-info" data-toggle="modal" data-target="#editTask-<?php echo $task->_; ?>">
-                            <span class="fa fa-pencil"></span>
-                          </button>
-                          <button type="submit" class="btn btn-danger">
-                            <span class="fa fa-close"></span>
-                          </button>
-                        </form>
-                      </td>
-                    </tr>
-                  <?php endforeach; ?>
-                </tbody>
-              </table>
           </div>
         </div>
+      </div>
+
+      <div class="col-md-10">
+            <div class="col-lg-12 col-md-12">
+              <div class="panel panel-default">
+                <div class="panel-heading space-between">
+                  <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search style="margin-right:15px" />
+                  <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#addTask" >
+                    <span class="fa fa-plus"></span> Adicionar Tarefa
+                  </button>
+                </div>
+                <table class="table table-striped no-margn">
+                    <thead>
+                      <tr>
+                        <th>Tarefa</th>
+                        <th>Deadline</th>
+                        <th>Designado à</th>
+                        <th>Status</th>
+                        <th><i class="fa fa-gears"></i></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <?php foreach($tasks as $task): ?>
+                        <tr data-searchable data-filter-index="<?php echo $task->status; ?>" >
+                          <td><?php echo $task->title; ?></td>
+                          <td>
+                            <?php $label = ((new \DateTime("now")) > (new \DateTime($task->deadline)) ? "label-danger" : "label-primary"); ?>
+                            <span class="label <?php echo $label; ?>"><?php echo (new \DateTime($task->deadline))->format("d-m-Y"); ?></span>
+                          </td>
+                          <td>
+                            <img src="/assets/manager/images/avtar/<?php echo $task->image; ?>" alt="<?php echo $task->name; ?>" class="img-circle avtar" />
+                            <?php echo $task->name; ?><br>
+                          </td>
+                          <td>
+                            <span class="label label-default"><?php echo $controller->ProjectStatus($task->status); ?></span>
+                          </td>
+                          <td>
+                            <form method="post" class="validator-form" action="/project/task/remove/<?php echo "{$project->_}/{$task->_}"?>" novalidate="novalidate">
+                              <?php echo $form->render("security"); ?>
+                              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#taskInfo-<?php echo $task->_; ?>">
+                                <span class="fa fa-info-circle"></span>
+                              </button>
+                              <button type="button" class="btn btn-info" data-toggle="modal" data-target="#editTask-<?php echo $task->_; ?>">
+                                <span class="fa fa-pencil"></span>
+                              </button>
+                              <button type="submit" class="btn btn-danger">
+                                <span class="fa fa-close"></span>
+                              </button>
+                            </form>
+                          </td>
+                        </tr>
+                      <?php endforeach; ?>
+                    </tbody>
+                  </table>
+              </div>
+            </div>
       </div>
     </div>
 
