--- a/apps/Manager/views/team/departments.phtml
+++ b/apps/Manager/views/team/departments.phtml
@@ -5,51 +5,55 @@
   </div>
 
   <div class="row">
-    <div class="col-md-12">
-      <div class="btn-group btn-group-justified">
-        <a role="button" class="btn btn-default" href="/team/" >Membros Cadastrados</a>
-        <a role="button" class="btn btn-default" href="/team/create" >Cadastrar Novo Membro</a>
-        <a role="button" class="btn btn-primary" href="/team/departments" >Departamentos</a>
-      </div><br>
-    </div>
-    <div class="col-md-12">
+    <div class="col-md-2">
       <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
+      <hr class="sm">
+      <div class="panel panel-default">
+        <div class="panel-heading clean">Navegação</div>
+        <div class="panel-body no-padd">
+          <div class="list-group no-margn mail-nav">
+            <a href="/team" class="list-group-item">Membros Cadastrados</a>
+            <a href="/team/create" class="list-group-item">Cadastrar Novo Membro</a>
+            <a href="/team/departments" class="list-group-item on">Departamentos</a>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <hr class="dotted">
+    <div class="col-md-10">
+      <div class="panel panel-default">
+        <table class="table table-striped no-margn">
+            <thead>
+              <tr>
+                <th>Departamento</th>
+                <th>
+                  <button type="button" class="btn btn-success pull-right" data-toggle="modal" data-target="#create">
+                    <span class="fa fa-plus"></span> Cadastrar
+                  </button>
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <?php foreach ($departments as $d): ?>
+                <tr data-searchable >
+                    <td><?php echo $d->department; ?></td>
+                    <td>
+                      <div class="pull-right">
+                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#edit" data-form-action="/team/departments/update/<?php echo $d->_ ;?>">
+                          <span class="fa fa-pencil"></span>
+                        </button>
+                        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#remove" data-form-action="/team/departments/remove/<?php echo $d->_ ;?>">
+                          <span class="fa fa-close"></span>
+                        </button>
+                      </div>
+                    </td>
+                </tr>
+              <?php endforeach; ?>
+            </tbody>
+          </table>
 
-  <div class="panel panel-default">
-    <table class="table table-striped no-margn">
-        <thead>
-          <tr>
-            <th>Departamento</th>
-            <th>
-              <button type="button" class="btn btn-success pull-right" data-toggle="modal" data-target="#create">
-                <span class="fa fa-plus"></span> Cadastrar
-              </button>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <?php foreach ($departments as $d): ?>
-            <tr data-searchable >
-                <td><?php echo $d->department; ?></td>
-                <td>
-                  <div class="pull-right">
-                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#edit" data-form-action="/team/departments/update/<?php echo $d->_ ;?>">
-                      <span class="fa fa-pencil"></span>
-                    </button>
-                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#remove" data-form-action="/team/departments/remove/<?php echo $d->_ ;?>">
-                      <span class="fa fa-close"></span>
-                    </button>
-                  </div>
-                </td>
-            </tr>
-          <?php endforeach; ?>
-        </tbody>
-      </table>
-
+      </div>
+    </div>
   </div>
 
 </div>
