--- a/apps/Manager/views/team/modify.phtml
+++ b/apps/Manager/views/team/modify.phtml
@@ -14,90 +14,104 @@
       </div>
     </div>
 
-    <div class="tab-content">
+    <div class="row">
+      <div class="col-md-2">
+        <div class="panel panel-default">
+          <div class="panel-heading clean">Navegação</div>
+          <div class="panel-body no-padd">
+            <div class="list-group no-margn mail-nav">
+              <a href="/team" class="list-group-item">Membros Cadastrados</a>
+              <a href="/team/create" class="list-group-item">Cadastrar Novo Membro</a>
+              <a href="/team/departments" class="list-group-item">Departamentos</a>
+            </div>
+          </div>
+        </div>
+      </div>
 
-      <div class="panel panel-default">
-        <div class="panel-body">
+      <div class="col-md-10">
+        <div class="panel panel-default">
+          <div class="panel-body">
 
-            <form method="post" class="form-horizontal validator-form" action="/team/update/<?php echo $uid; ?>" accept-charset="utf8" enctype="multipart/form-data" novalidate="novalidate">
-              <?php echo $form->render("security"); ?>
-              <div class="row">
+              <form method="post" class="form-horizontal validator-form" action="/team/update/<?php echo $uid; ?>" accept-charset="utf8" enctype="multipart/form-data" novalidate="novalidate">
+                <?php echo $form->render("security"); ?>
+                <div class="row">
 
-                <div class="col-md-6">
-                    <label class="control-label">Nome Completo</label>
-                    <div class="form-group has-feedback">
-                      <?php echo $form->render("name"); ?>
-                    </div>
+                  <div class="col-md-6">
+                      <label class="control-label">Nome Completo</label>
+                      <div class="form-group has-feedback">
+                        <?php echo $form->render("name"); ?>
+                      </div>
+                  </div>
+
+                  <div class="col-md-6">
+                      <label class="control-label">Email</label>
+                      <div class="form-group has-feedback">
+                        <?php echo $form->render("email"); ?>
+                      </div>
+                  </div>
+
+                </div>
+                <div class="row">
+
+                  <div class="col-md-6">
+                      <label class="control-label">Telefone</label>
+                      <div class="form-group has-feedback">
+                        <?php echo $form->render("phone"); ?>
+                      </div>
+                  </div>
+
+                  <div class="col-md-6">
+                      <label class="control-label">Departamento</label>
+                      <div class="form-group has-feedback">
+                        <?php echo $form->render("department"); ?>
+                      </div>
+                  </div>
+
+                </div>
+                <div class="row">
+
+                  <div class="col-md-6">
+                      <label class="control-label">Foto</label>
+                      <div class="form-group has-feedback">
+                        <?php echo $form->render("image"); ?>
+                      </div>
+                  </div>
+
                 </div>
 
-                <div class="col-md-6">
-                    <label class="control-label">Email</label>
-                    <div class="form-group has-feedback">
-                      <?php echo $form->render("email"); ?>
-                    </div>
+                <hr class="dotted">
+
+                <div class="row">
+
+                  <div class="col-md-3">
+                      <label class="control-label">Nome de Usuário</label>
+                      <div class="form-group has-feedback">
+                        <?php echo $form->render("username"); ?>
+                      </div>
+                  </div>
+
+                  <div class="clearfix"></div>
+
+                  <div class="col-md-3">
+                      <label class="control-label">Senha de Acesso</label>
+                      <div class="form-group has-feedback">
+                        <?php echo $form->render("password"); ?>
+                      </div>
+                  </div>
+
                 </div>
 
-              </div>
-              <div class="row">
+                <hr class="dotted">
 
-                <div class="col-md-6">
-                    <label class="control-label">Telefone</label>
-                    <div class="form-group has-feedback">
-                      <?php echo $form->render("phone"); ?>
-                    </div>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <button type="submit" class="btn btn-primary btn-lg pull-right" name="signup" value="Validate">Alterar</button>
+                  </div>
                 </div>
 
-                <div class="col-md-6">
-                    <label class="control-label">Departamento</label>
-                    <div class="form-group has-feedback">
-                      <?php echo $form->render("department"); ?>
-                    </div>
-                </div>
+              </form>
 
-              </div>
-              <div class="row">
-
-                <div class="col-md-6">
-                    <label class="control-label">Foto</label>
-                    <div class="form-group has-feedback">
-                      <?php echo $form->render("image"); ?>
-                    </div>
-                </div>
-
-              </div>
-
-              <hr class="dotted">
-
-              <div class="row">
-
-                <div class="col-md-3">
-                    <label class="control-label">Nome de Usuário</label>
-                    <div class="form-group has-feedback">
-                      <?php echo $form->render("username"); ?>
-                    </div>
-                </div>
-
-                <div class="clearfix"></div>
-
-                <div class="col-md-3">
-                    <label class="control-label">Senha de Acesso</label>
-                    <div class="form-group has-feedback">
-                      <?php echo $form->render("password"); ?>
-                    </div>
-                </div>
-
-              </div>
-
-              <hr class="dotted">
-
-              <div class="row">
-                <div class="col-sm-12">
-                  <button type="submit" class="btn btn-primary btn-lg pull-right" name="signup" value="Validate">Cadastrar</button>
-                </div>
-              </div>
-
-            </form>
-
+          </div>
         </div>
       </div>
 
