--- a/apps/Manager/views/tasks/index.phtml
+++ b/apps/Manager/views/tasks/index.phtml
@@ -11,19 +11,18 @@
         <p id="desc"></p>
       </div>
     </div>
-    <div class="col-md-10 col-sm-12">
-      <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search ><br>
-    </div>
-    <div class="col-md-2 col-sm-12">
+  </div>
+  <hr class="dotted">
+  <div class="row">
+    <div class="col-md-2">
+      <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
+      <hr class="sm">
       <div class="btn-group btn-group-justified">
         <a role="button" class="btn btn-warning" data-filter="1" >Abertos</a>
         <a role="button" class="btn btn-warning" data-filter="2" >Concluídos</a>
       </div>
     </div>
-  </div>
-  <hr class="dotted">
-  <div class="row">
-    <div class="col-lg-12 col-md-12">
+    <div class="col-md-10">
       <div class="panel panel-default">
         <table class="table table-striped no-margn">
             <thead>
