small design fix

--- a/apps/Manager/views/settings/admin.phtml
+++ b/apps/Manager/views/settings/admin.phtml
@@ -65,11 +65,12 @@
         <div class="panel panel-default">
           <div class="panel-body">
 
-  
+
 
           </div>
 
         </div>
       </div>
 
+  </div>
 </div>
