--- a/apps/Manager/views/projects/index.phtml
+++ b/apps/Manager/views/projects/index.phtml
@@ -37,7 +37,7 @@
     <div class="col-md-10">
 
 
-      <div class="panel panel-default">
+      <div class="panel panel-default table-responsive">
         <table class="table table-striped no-margn">
             <thead>
               <tr>
