--- a/apps/Manager/views/team/index.phtml
+++ b/apps/Manager/views/team/index.phtml
@@ -31,8 +31,7 @@
     </div>
 
     <div class="col-md-10">
-      <div class="panel panel-default">
-
+      <div class="panel panel-default table-responsive">
         <table class="table table-striped no-margn">
             <thead>
               <tr>
