--- a/apps/Manager/views/settings/index.phtml
+++ b/apps/Manager/views/settings/index.phtml
@@ -32,30 +32,11 @@
 
         <hr class="xs">
 
-        <div class="panel-heading clean">Equipe</div>
+        <div class="panel-heading clean">Permissões</div>
         <div class="panel-body no-padd">
         	<div class="list-group no-margn mail-nav">
-            <a href="/settings/team/permissions" class="list-group-item on">Permissões</a>
-          </div>
-        </div>
-
-        <hr class="xs">
-
-        <div class="panel-heading clean">Clientes</div>
-        <div class="panel-body no-padd">
-        	<div class="list-group no-margn mail-nav">
-            <a href="/settings/clients/permissions" class="list-group-item">Permissões</a>
-          </div>
-        </div>
-
-        <hr class="xs">
-
-        <div class="panel-heading clean">Projetos</div>
-        <div class="panel-body no-padd">
-        	<div class="list-group no-margn mail-nav">
-            <a href="#" class="list-group-item">Work</a>
-            <a href="#" class="list-group-item">Personal</a>
-            <a href="#" class="list-group-item">Other</a>
+            <a href="/settings/permissions/team" class="list-group-item">Equipe</a>
+            <a href="/settings/permissions/clients" class="list-group-item">Clientes</a>
           </div>
         </div>
 
